libcontentaction (0.1.0~unreleased) unstable; urgency=low

  * Major changes:
    -- All actions are defined in .desktop files.
    -- Tracker-based conditions and highlighter regexps are
       defined in the configuration files.
    -- Default-ness related methods of Action are gone, also
       defaults are not stored in GConf.  (API pending).
  * New package: libcontentaction-data
    Contains configuration files.
  * Package libcontentaction-dui removed.
    Now libcontentaction depends on libdui unconditionally.

 -- Akos PASZTORY <ext-akos.pasztory@nokia.com>  Wed, 17 Mar 2010 14:46:08 +0200

libcontentaction (0.0.8.1) unstable; urgency=low

  * Update build dependency to libtracker-client to reflect binary package renaming

 -- Jean-Luc Lamadon <jean-luc.lamadon@nokia.com>  Fri, 12 Mar 2010 13:52:11 +0200

libcontentaction (0.0.8) unstable; urgency=low

  * Documentation update
  * Bugfix: missing g_type_init()

 -- Marja Hassinen <ext-marja.2.hassinen@nokia.com>  Thu, 25 Feb 2010 11:25:33 +0200

libcontentaction (0.0.7) unstable; urgency=low

  * API additions: defaultActionForFile, actionsForFile taking in the mime
    type of the file and not trying to read the file themselves.

 -- Marja Hassinen <ext-marja.2.hassinen@nokia.com>  Wed, 24 Feb 2010 10:27:26 +0200

libcontentaction (0.0.6) unstable; urgency=low

  * New binary package: libcontentaction-dui0
    Containing DUI related functionality.

 -- Akos PASZTORY <ext-akos.pasztory@nokia.com>  Thu, 18 Feb 2010 09:13:06 +0200

libcontentaction (0.0.5) unstable; urgency=low

  * API additions: defaultActionForFile, actionsForFile
  * Actions for desktop files (launch the corresponding app)
  * Implemented: SWP#CntFr-421, SWP#CntFr-411

 -- Marja Hassinen <ext-marja.2.hassinen@nokia.com>  Wed, 17 Feb 2010 10:51:15 +0200

libcontentaction (0.0.4) unstable; urgency=low

  * Using dui service mapper and service implementors directly, without generated .so's.