@@ -1,0 +1,8 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=add contact to phonebook
+Exec=echo "adding contact, params:" %U
+Terminal=false
+Type=Application
+NotShowIn=X-DUI;
+MimeType=x-maemo-highlight/phone;
