@@ -1,6 +1,6 @@
 [MIME Cache]
 x-maemo-highlight/email=emailer.desktop
-text/plain=uberexec.desktop;fixedparams.desktop;ubermimeopen.desktop;uberdui.desktop;
-x-maemo-highlight/phone=caller.desktop
-x-maemo-nepomuk/image=galleryserviceinterface.desktop;other.desktop;show.desktop;upload.desktop;
+x-maemo-highlight/phone=addcontact.desktop;caller.desktop;
+x-maemo-nepomuk/image=galleryserviceinterface.desktop;other.desktop;upload.desktop;show.desktop;
 x-maemo-nepomuk/contact=contacthandler.desktop
+text/plain=uberdui.desktop;uberexec.desktop;fixedparams.desktop;ubermimeopen.desktop;
